[package]
name = "robin_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12", features = ["gateway", "client"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
